<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/brightnessLayout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:stretchColumns="*"
    android:visibility="invisible" >

    <TableRow>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:paddingEnd="0dp"
                android:paddingLeft="15dp"
                android:paddingRight="0dp"
                android:paddingStart="15dp"
                android:paddingTop="38dp"
                android:text="@string/brightness"
                android:textColor="@android:color/white" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:orientation="horizontal"
                android:paddingEnd="15dp"
                android:paddingLeft="0dp"
                android:paddingRight="15dp"
                android:paddingStart="0dp"
                android:paddingTop="30dp" >

                <CheckBox
                    android:id="@+id/checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/auto"
                    android:textColor="@android:color/white" />
            </LinearLayout>
        </RelativeLayout>
    </TableRow>

    <TableRow>

        <SeekBar
            android:id="@+id/seekbarBrightness"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:max="100"
            android:paddingBottom="10dp"
            android:paddingLeft="35dp"
            android:paddingRight="35dp"
            android:paddingTop="10dp"
            android:progressDrawable="@drawable/progress"
            android:thumb="@drawable/thumb" />
    </TableRow>

    <TableRow>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:paddingEnd="0dp"
                android:paddingLeft="15dp"
                android:paddingRight="0dp"
                android:paddingStart="15dp"
                android:text="@string/screen_timeout"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/timeoutTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:paddingEnd="15dp"
                android:paddingLeft="0dp"
                android:paddingRight="15dp"
                android:paddingStart="0dp"
                android:text="@string/sec"
                android:textColor="@android:color/white" />
        </RelativeLayout>
    </TableRow>

    <TableRow>

        <SeekBar
            android:id="@+id/seekbarTimeout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:max="6"
            android:paddingBottom="10dp"
            android:paddingLeft="35dp"
            android:paddingRight="35dp"
            android:paddingTop="10dp"
            android:progressDrawable="@drawable/progress"
            android:thumb="@drawable/thumb" />
    </TableRow>

    <TableRow>

        <ImageView
            android:id="@+id/backImage"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/image_desc"
            android:paddingTop="10dp"
            android:src="@drawable/ic_back_new" />
    </TableRow>

</TableLayout>