<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_toolbar"
        android:minHeight="?attr/actionBarSize" >
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/config_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="2dp"
            android:layout_marginRight="2dp"
            android:background="@drawable/curve_shape_setting"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20dp" >

            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/image_desc"
                android:src="@drawable/setting_panel" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text="@string/config_setting" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/display_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginStart="2dp"
            android:background="@drawable/curve_shape_setting"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20dp" >

            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/image_desc"
                android:src="@drawable/setting_display" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text="@string/display_setting" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>